--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>test</h1>
-    <script src="./dist/dfsta.js"></script>
+    <script src="./dfsta.js"></script>
     <script>
     </script>
 </body>
