pv上报基本完成

--- a/demo1.html
+++ b/demo1.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>埋点测试页</title>
+    <title>demo1</title>
 </head>
 <body>
-    <h1>test</h1>
-    <p>--------------------------------------------</p>
-    <a href="demo1.html">demo1</a>
+    <h1>demo1</h1>
     <script src="./dfsta.js"></script>
-    <script>
-    </script>
 </body>
 </html>
