上报的方式兼容式写法。。

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h1>test</h1>
     <p>--------------------------------------------</p>
     <a href="demo1.html">demo1</a>
+    <div class="login">
+        <p>模拟登陆</p>
+        <button id="login">登陆</button>
+    </div>
     <script src="./dfsta.js"></script>
     <script>
     </script>
