--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>埋点测试页</title>
 </head>
 <body>
-    <h1 collect-data="{type: 'index_hd_h1', desc: '点击h1标题'}" >clickid</h1>
+    <h1 collect-data='{"type": "index_hd_h1", "desc": "点击h1标题"}' >clickid</h1>
+    <h1 collect-data="{}">哈哈哈哈哈</h1>
     <h1 id="dispatchid">dispatchid</h1>
     <p>--------------------------------------------</p>
     <a href="demo1.html">demo1</a>
