--- a/demo1.html
+++ b/demo1.html
@@ -10,5 +10,9 @@
     <h1>demo1</h1>
     <a href="./demo2.html">条</a>
     <script src="./dfsta.js"></script>
+    <script>
+        var dfCollect = new DF_SDK_Collect()
+        dfCollect.pageVisit()
+    </script>
 </body>
 </html>
