--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 id="clickDom">哈哈哈哈哈</h1>
+    <h1 id="clickDom1">dfd</h1>
     <h1>dispatchid</h1>
     <p>--------------------------------------------</p>
     <a href="demo1.html">demo1</a>
@@ -18,6 +19,7 @@
     <script src="./dfsta.js"></script>
     <script>
         var clickDom = document.getElementById('clickDom');
+        var clickDom1 = document.getElementById('clickDom1');
         var dfCollect = new DF_SDK_Collect({sendUrl: 'http://www.baidu.com',commonUpData:{plantform:'zs'}});
         console.log(dfCollect);
         dfCollect.pageVisit({mall_userId:'1111'});
@@ -27,6 +29,16 @@
                 'extraInfo': {
                     'name': '王老吉',
                     'age': 14
+                }
+            }
+            dfCollect.clickHandler(obj)
+        }
+        clickDom1.onclick = function(){
+            let obj = {
+                'pageChannel': '',
+                'extraInfo': {
+                    'type': 'llllll',
+                    'age': 10
                 }
             }
             dfCollect.clickHandler(obj)
