--- a/demo1.html
+++ b/demo1.html
@@ -9,9 +9,9 @@
 <body>
     <h1>demo1</h1>
     <a href="./demo2.html">条</a>
-    <script src="./dfsta.js"></script>
+    <script src="./DFCollectSDK.js"></script>
     <script>
-        var dfCollect = new DF_SDK_Collect()
+        var dfCollect = new DFCollectSDK()
         dfCollect.pageVisit({
             mall_userId:'1111',
             extraInfo: {
