--- a/demo2.html
+++ b/demo2.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>demo2</h1>
-    <script src="./dist/dfsta.js"></script>
+    <script src="./dist/DFCollectSDK.js"></script>
 </body>
 </html>
