--- a/index.html
+++ b/index.html
@@ -10,58 +10,48 @@
     <h1 >dispatchid<em>哈哈哈哈哈哈</em></h1>
     <a href="demo1.html">demo1</a>
     <div class="login"  >
-        <p data-dffl="pArea">模拟登陆</p>
-        <button id="login" onclick="dfCollect.dispatch(this)">登陆</button>
+        <p onclick="sub()">模拟登陆</p>
+        <button id="login" onclick="login()">登陆</button>
     </div>
     <script src="./DFCollectSDK.js"></script>
     <script>
+
         var dfCollect = new DFCollectSDK({
             dsendUrl: 'http://www.baidu.com',
             commonUpData:{}
         })
 
+
         dfCollect.setIntervalPv(2000);
 
-        // //点击自动上报
-        // dfCollect.clickFn = function () {
-        //     var that = this;
-        //     window.addEventListener('click', function (e) {
-        //         var currentTarget = e.target.nodeName;
-        //         var pagePosition = e.target.getAttribute('data-dffl')||'';
-        //         if(pagePosition){   //如果有data-dffl属性，就去上报
-        //             that.clickHandler({
-        //                 eventType: 'click',
-        //                 pageChannel: '生日汇',
-        //                 currentTarget: currentTarget,
-        //                 pagePosition: pagePosition,
-        //                 extraInfo: null
-        //             })
-        //         }
-        //     }, false)
-        // }
 
-        // //自定义上报
-        // dfCollect.dispatch = function(e){
-        //     var that = this;
-        //     var currentTarget = e.nodeName;
-        //     var pagePosition = 'btnArea'
-        //     that.clickHandler({
-        //         eventType: 'click',
-        //         pageChannel: '生日汇',
-        //         currentTarget: currentTarget,
-        //         pagePosition: pagePosition,
-        //         extraInfo: {
-        //             name: 'login'
-        //         }
-        //     })
-        // }
-        // //初始化方法
-        // dfCollect.init = function(){
-        //     this.setIntervalPv(2000);
-        //     // this.clickFn();
-        // }
+        function login(){
+            dfCollect.clickHandler({
+                pageChannel: 'health',
+                pageName: '详情',
+                pageUrl: location.href,
+                pagePosition: 'header',
+                currentTarget: 'button',
+                eventType: 'login',
+                extraInfo: null
+            });
+        }
 
-        // dfCollect.init();
+
+        function sub(){
+            dfCollect.clickHandler({
+                pageChannel: 'health',
+                pageName: '',
+                pageUrl: location.href,
+                pagePosition: 'header',
+                currentTarget: 'button',
+                eventType: 'login',
+                extraInfo: {
+                    name: 'LLF',
+                    age: '28'
+                }
+            });
+        }
 
     </script>
 </body>
