--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 >dispatchid<em>哈哈哈哈哈哈</em></h1>
-    <a href="demo1.html">demo1</a>
+    <a href="demo1.html" target="_blank">demo1</a>
     <div class="login"  >
         <p onclick="sub()">模拟登陆</p>
         <button id="login" onclick="login()">登陆</button>
@@ -17,7 +17,7 @@
     <script>
 
         var dfCollect = new DFCollectSDK({
-            dsendUrl: 'http://www.baidu.com',
+            // sendUrl: 'http://www.baidu.com',
             commonUpData:{}
         })
 
